src/index.css
@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

#root {
  height: 100vh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: black;
  font-family: "Comfortaa", sans-serif;
}

/* CUSTOM STYLE GROUPS */
.c-home-slider-sections {
  @apply flex flex-col gap-[4vw] mt-[12vw];
}
.c-h2 {
  @apply w-full text-[6vw] ml-[5vw];
}

/* SLIDER */
.slick-slider {
  margin: 0 4vw;
}
.slick-slide > div {
  margin: 0 1vw;
}

/* FOOTER ACCORDION */
.accordion-content {
  @apply overflow-hidden transition ease-in;
  max-height: 0;
}
.accordion-content-open {
  max-height: 200px;
}

